project files changed to be non-static